move/PCI_8164.H

	I16 FNTYPE _8164_initial(I16 *existCards);
I16 FNTYPE _8164_int_enable(I16 CardNo,HANDLE *phEvent);
I16 FNTYPE _8164_int_disable(I16 CardNo);
I16 FNTYPE _8164_get_int_status(I16 AxisNo, U32 *error_int_status, U32 *event_int_status );
I16 FNTYPE _8164_link_interrupt(I16 CardNo,void ( __stdcall *callbackAddr)(I16 IntAxisNoInCard));
    I16 FNTYPE _8164_int_enable(I16 CardNo, void (*event_handler1)(int), void (*event_handler2)(int),        void (*event_handler3)(int), void (*event_handler4)(int));
    I16 FNTYPE _8164_int_disable(I16 CardNo);
	I16 FNTYPE _8164_get_int_status(I16 AxisNo, U32 *error_int_status, U32 *event_int_status );
I16 FNTYPE _8164_int_enable(I16 CardNo,I32 ThreadID);
I16 FNTYPE _8164_int_disable(I16 CardNo);
I16 FNTYPE _8164_get_int_status(I16 AxisNo, U32 *error_int_status, U32 *event_int_status );
I16 FNTYPE _8164_int_control(U16 cardNo, U16 intFlag );
I16 FNTYPE _8164_set_int_factor(I16 AxisNo, U32 int_factor );
I16 FNTYPE _8164_close(void);
I16 FNTYPE _8164_get_irq_channel(I16 cardNo, U16 *irq_no );
I16 FNTYPE _8164_get_base_addr(I16 cardNo, U16 *base_addr );
I16 FNTYPE _8164_get_io_status(I16 AxisNo, U16 *io_sts);
I16 FNTYPE _8164_motion_done(I16 AxisNo);
I16 FNTYPE _8164_get_position(I16 AxisNo, F64 *pos);
I16 FNTYPE _8164_set_position(I16 AxisNo, F64 pos);
I16 FNTYPE _8164_get_command(I16 AxisNo, I32 *cmd);
I16 FNTYPE _8164_set_command(I16 AxisNo, I32 cmd);
I16 FNTYPE _8164_get_error_counter(I16 AxisNo, I16 *error);
I16 FNTYPE _8164_reset_error_counter(I16 AxisNo);
I16 FNTYPE _8164_get_target_pos(I16 AxisNo, F64 *pos);
I16 FNTYPE _8164_reset_target_pos(I16 AxisNo, F64 pos);
I16 FNTYPE _8164_get_current_speed(I16 AxisNo, F64 *speed);
I16 FNTYPE _8164_get_rest_command(I16 AxisNo, I32 *rest_command);
I16 FNTYPE _8164_get_latch_data(I16 AxisNo, I16 LatchNo, F64 *Pos);
I16 FNTYPE _8164_check_rdp(I16 AxisNo, I32 *rdp_command);
I16 FNTYPE _8164_set_servo(I16 AxisNo, I16 on_off);
I16 FNTYPE _8164_set_pls_outmode(I16 AxisNo, I16 pls_outmode);
I16 FNTYPE _8164_set_pls_iptmode(I16 AxisNo, I16 pls_iptmode, I16 pls_logic);
I16 FNTYPE _8164_set_feedback_src(I16 AxisNo, I16 Src);
I16 FNTYPE _8164_set_general_counter(I16 AxisNo,I16 CntSrc, F64 CntValue);
I16 FNTYPE _8164_get_general_counter(I16 AxisNo, F64 *CntValue);
// PCI-8164 Only
I16 FNTYPE _8164_d_output(I16 CardNo, I16 Ch_No, I16 value);
I16 FNTYPE _8164_get_dio_status(I16 CardNo, U16 *dio_sts);
I16 FNTYPE _8164_set_alm(I16 AxisNo, I16 alm_logic, I16 alm_mode);
I16 FNTYPE _8164_set_ltc_logic(I16 AxisNo, I16 ltc_logic);
I16 FNTYPE _8164_set_pcs_logic(I16 AxisNo, I16 pcs_logic);
I16 FNTYPE _8164_set_erc(I16 AxisNo, I16 erc_logic, I16 erc_on_time);
I16 FNTYPE _8164_set_sd(I16 AxisNo, I16 enable, I16 sd_logic, I16 sd_latch, I16 sd_mode);
I16 FNTYPE _8164_set_el(I16 AxisNo, I16 el_mode);
I16 FNTYPE _8164_set_move_ratio(I16 AxisNo, F64 move_ratio);
I16 FNTYPE _8164_set_sd_pin(I16 AxisNo, I16 Type);
I16 FNTYPE _8164_set_home_config(I16 AxisNo, I16 home_mode, I16 org_logic, I16 ez_logic, I16 ez_count, I16 erc_out);
I16 FNTYPE _8164_home_move(I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc);
I16 FNTYPE _8164_pulser_vmove(I16 AxisNo,F64 SpeedLimit);
I16 FNTYPE _8164_pulser_pmove(I16 AxisNo, F64 Dist,F64 SpeedLimit);
I16 FNTYPE _8164_pulser_home_move(I16 AxisNo, I16 HomeType,F64 SpeedLimit);
I16 FNTYPE _8164_set_pulser_iptmode(I16 AxisNo,I16 InputMode, I16 Inverse);
I16 FNTYPE _8164_backlash_comp(I16 AxisNo, I16 BCompPulse, I16 Mode);
I16 FNTYPE _8164_suppress_vibration(I16 AxisNo, U16 ReverseTime, U16 ForwardTime);
// Pitch compensate function
I16 FNTYPE _8164_set_pitch_compensate(I16 AxisNo, I16 TableSize, I32 *PTableArray, I32 *NTableArray, I32 TableInterval);
I16 FNTYPE _8164_enable_pitch_compensate(I16 AxisNo, I16 Enable);
I16 FNTYPE _8164_calculate_amove_pitch_compensate( I16 AxisNo, F64 Pos, F64 *Result );
I16 FNTYPE _8164_calculate_rmove_pitch_compensate( I16 AxisNo, F64 Dist, F64 *Result );
I16 FNTYPE _8164_get_pitch_table_target_pos( I16 AxisNo, F64 *TargetPos );
I16 FNTYPE _8164_tv_move(I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc);
I16 FNTYPE _8164_sv_move(I16 AxisNo, F64 StrVel, F64 MaxVel, F64 Tacc, F64 SVacc);
I16 FNTYPE _8164_emg_stop(I16 AxisNo);
I16 FNTYPE _8164_sd_stop(I16 AxisNo,F64 Tdec);
I16 FNTYPE _8164_sd_stop_ex(I16 AxisNo,F64 Tdec);
I16 FNTYPE _8164_v_change(I16 AxisNo, F64 NewVel, F64 Time);
I16 FNTYPE _8164_cmp_v_change(I16 AxisNo, F64 Res_Dist, F64 OldVel, F64 NewVel, F64 Time);
I16 FNTYPE _8164_p_change(I16 AxisNo, F64 NewPos);
I16 FNTYPE _8164_fix_speed_range(I16 AxisNo, F64 MaxVel);
I16 FNTYPE _8164_unfix_speed_range(I16 AxisNo);
I16 FNTYPE _8164_set_continuous_move(I16 AxisNo, I16 conti_logic);
I16 FNTYPE _8164_set_soft_limit(I16 AxisNo, I32 PLimit, I32 NLimit);
I16 FNTYPE _8164_disable_soft_limit(I16 AxisNo);
I16 FNTYPE _8164_enable_soft_limit(I16 AxisNo, I16 Action);
I16 FNTYPE _8164_set_error_counter_check(I16 AxisNo, I16 Tolerance, I16 On_Off);
I16 FNTYPE _8164_set_general_comparator(I16 AxisNo, I16 CmpSrc, I16 CmpMethod, I16 CmpAction, F64 Data);
I16 FNTYPE _8164_set_trigger_comparator(I16 AxisNo, I16 CmpSrc, I16 CmpMethod, F64 Data);
I16 FNTYPE _8164_set_trigger_type(I16 AxisNo, I16 TriggerType);
I16 FNTYPE _8164_check_compare_data(I16 AxisNo, I16 CompType, F64 *Pos);