move/Pci_8164.BAS

Attribute VB_Name = "PCI_8164"
Option Explicit

Declare Function B_8164_initial Lib "8164.dll" Alias "_8164_initial" (existCards As Integer) As Integer
Declare Function B_8164_int_control Lib "8164.dll" Alias "_8164_int_control" (ByVal CardNo As Integer, ByVal intFlag As Integer) As Integer

Declare Function B_8164_int_enable Lib "8164.dll" Alias "_8164_int_enable" (ByVal CardNo As Integer, phEvent As Long) As Integer
Declare Function B_8164_int_disable Lib "8164.dll" Alias "_8164_int_disable" (ByVal CardNo As Integer) As Integer
Declare Function B_8164_get_int_status Lib "8164.dll" Alias "_8164_get_int_status" (ByVal AxisNo As Integer, error_int_status As Long, event_int_status As Long) As Integer
Declare Function B_8164_link_interrupt Lib "8164.dll" Alias "_8164_link_interrupt" (ByVal CardNo As Integer, ByVal lpCallBackProc As Long) As Integer

Declare Function B_8164_set_int_factor Lib "8164.dll" Alias "_8164_set_int_factor" (ByVal AxisNo As Integer, ByVal int_factor As Long) As Integer
Declare Function B_8164_close Lib "8164.dll" Alias "_8164_close" () As Integer
Declare Function B_8164_get_irq_channel Lib "8164.dll" Alias "_8164_get_irq_channel" (ByVal CardNo As Integer, irq_no As Integer) As Integer
Declare Function B_8164_get_base_addr Lib "8164.dll" Alias "_8164_get_base_addr" (ByVal CardNo As Integer, base_addr As Integer) As Integer
Declare Function B_8164_get_io_status Lib "8164.dll" Alias "_8164_get_io_status" (ByVal AxisNo As Integer, io_sts As Integer) As Integer
Declare Function B_8164_motion_done Lib "8164.dll" Alias "_8164_motion_done" (ByVal AxisNo As Integer) As Integer
Declare Function B_8164_get_position Lib "8164.dll" Alias "_8164_get_position" (ByVal AxisNo As Integer, Pos As Double) As Integer
Declare Function B_8164_set_position Lib "8164.dll" Alias "_8164_set_position" (ByVal AxisNo As Integer, ByVal Pos As Double) As Integer
Declare Function B_8164_get_command Lib "8164.dll" Alias "_8164_get_command" (ByVal AxisNo As Integer, CMD As Long) As Integer
Declare Function B_8164_set_command Lib "8164.dll" Alias "_8164_set_command" (ByVal AxisNo As Integer, ByVal CMD As Long) As Integer
Declare Function B_8164_get_error_counter Lib "8164.dll" Alias "_8164_get_error_counter" (ByVal AxisNo As Integer, error_counter As Integer) As Integer
Declare Function B_8164_reset_error_counter Lib "8164.dll" Alias "_8164_reset_error_counter" (ByVal AxisNo As Integer) As Integer
Declare Function B_8164_get_target_pos Lib "8164.dll" Alias "_8164_get_target_pos" (ByVal AxisNo As Integer, Pos As Double) As Integer
Declare Function B_8164_reset_target_pos Lib "8164.dll" Alias "_8164_reset_target_pos" (ByVal AxisNo As Integer, ByVal Pos As Double) As Integer
Declare Function B_8164_get_current_speed Lib "8164.dll" Alias "_8164_get_current_speed" (ByVal AxisNo As Integer, Speed As Double) As Integer
Declare Function B_8164_get_rest_command Lib "8164.dll" Alias "_8164_get_rest_command" (ByVal AxisNo As Integer, rest_command As Long) As Integer
Declare Function B_8164_get_latch_data Lib "8164.dll" Alias "_8164_get_latch_data" (ByVal AxisNo As Integer, ByVal LatchNo As Integer, Pos As Double) As Integer
Declare Function B_8164_check_rdp Lib "8164.dll" Alias "_8164_check_rdp" (ByVal AxisNo As Integer, rdp_command As Long) As Integer
Declare Function B_8164_set_servo Lib "8164.dll" Alias "_8164_set_servo" (ByVal AxisNo As Integer, ByVal on_off As Integer) As Integer
Declare Function B_8164_set_pls_outmode Lib "8164.dll" Alias "_8164_set_pls_outmode" (ByVal AxisNo As Integer, ByVal pls_outmode As Integer) As Integer
Declare Function B_8164_set_pls_iptmode Lib "8164.dll" Alias "_8164_set_pls_iptmode" (ByVal AxisNo As Integer, ByVal pls_iptmode As Integer, ByVal pls_logic As Integer) As Integer
Declare Function B_8164_set_feedback_src Lib "8164.dll" Alias "_8164_set_feedback_src" (ByVal AxisNo As Integer, ByVal src As Integer) As Integer
Declare Function B_8164_set_general_counter Lib "8164.dll" Alias "_8164_set_general_counter" (ByVal AxisNo As Integer, ByVal CntSrc As Integer, ByVal CntValue As Double) As Integer
Declare Function B_8164_get_general_counter Lib "8164.dll" Alias "_8164_get_general_counter" (ByVal AxisNo As Integer, CntValue As Double) As Integer
Declare Function B_8164_d_output Lib "8164.dll" Alias "_8164_d_output" (ByVal CardNo As Integer, ByVal Ch_No As Integer, ByVal Value As Integer) As Integer
Declare Function B_8164_get_dio_status Lib "8164.dll" Alias "_8164_get_dio_status" (ByVal CardNo As Integer, dio_sts As Integer) As Integer

Declare Function B_8164_set_alm Lib "8164.dll" Alias "_8164_set_alm" (ByVal AxisNo As Integer, ByVal alm_logic As Integer, ByVal alm_mode As Integer) As Integer
Declare Function B_8164_set_ltc_logic Lib "8164.dll" Alias "_8164_set_ltc_logic" (ByVal AxisNo As Integer, ByVal ltc_logic As Integer) As Integer
Declare Function B_8164_set_pcs_logic Lib "8164.dll" Alias "_8164_set_pcs_logic" (ByVal AxisNo As Integer, ByVal pcs_logic As Integer) As Integer
Declare Function B_8164_set_erc Lib "8164.dll" Alias "_8164_set_erc" (ByVal AxisNo As Integer, ByVal erc_logic As Integer, ByVal erc_on_time As Integer) As Integer
Declare Function B_8164_set_sd Lib "8164.dll" Alias "_8164_set_sd" (ByVal AxisNo As Integer, ByVal Enable As Integer, ByVal sd_logic As Integer, ByVal sd_latch As Integer, ByVal sd_mode As Integer) As Integer
Declare Function B_8164_set_el Lib "8164.dll" Alias "_8164_set_el" (ByVal AxisNo As Integer, ByVal el_mode As Integer) As Integer
Declare Function B_8164_set_move_ratio Lib "8164.dll" Alias "_8164_set_move_ratio" (ByVal AxisNo As Integer, ByVal move_ratio As Double) As Integer
Declare Function B_8164_set_sd_pin Lib "8164.dll" Alias "_8164_set_sd_pin" (ByVal AxisNo As Integer, ByVal TypeA As Integer) As Integer

Declare Function B_8164_set_home_config Lib "8164.dll" Alias "_8164_set_home_config" (ByVal AxisNo As Integer, ByVal home_mode As Integer, ByVal org_logic As Integer, ByVal ez_logic As Integer, ByVal ez_count As Integer, ByVal erc_out As Integer) As Integer
Declare Function B_8164_home_move Lib "8164.dll" Alias "_8164_home_move" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer

Declare Function B_8164_pulser_vmove Lib "8164.dll" Alias "_8164_pulser_vmove" (ByVal AxisNo As Integer, ByVal SpeedLimit As Double) As Integer
Declare Function B_8164_pulser_pmove Lib "8164.dll" Alias "_8164_pulser_pmove" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal SpeedLimit As Double) As Integer
Declare Function B_8164_pulser_home_move Lib "8164.dll" Alias "_8164_pulser_home_move" (ByVal AxisNo As Integer, ByVal HomeType As Integer, ByVal SpeedLimit As Double) As Integer
Declare Function B_8164_set_pulser_iptmode Lib "8164.dll" Alias "_8164_set_pulser_iptmode" (ByVal AxisNo As Integer, ByVal InputMode As Integer, ByVal Inverse As Integer) As Integer
Declare Function B_8164_backlash_comp Lib "8164.dll" Alias "_8164_backlash_comp" (ByVal AxisNo As Integer, ByVal BCompPulse As Integer, ByVal ForwardTime As Integer) As Integer
Declare Function B_8164_suppress_vibration Lib "8164.dll" Alias "_8164_suppress_vibration" (ByVal AxisNo As Integer, ByVal ReserveTime As Integer, ByVal ForwardTime As Integer) As Integer

Declare Function B_8164_set_pitch_compensate Lib "8164.dll" Alias "_8164_set_pitch_compensate" (ByVal AxisNo As Integer, ByVal TableSize As Integer, PTableArray As Long, NTableArray As Long, ByVal TableInterval As Long) As Integer
Declare Function B_8164_enable_pitch_compensate Lib "8164.dll" Alias "_8164_enable_pitch_compensate" (ByVal AxisNo As Integer, ByVal Enable As Integer) As Integer
Declare Function B_8164_calculate_amove_pitch_compensate Lib "8164.dll" Alias "_8164_calculate_amove_pitch_compensate" (ByVal AxisNo As Integer, ByVal Pos As Double, Result As Double) As Integer
Declare Function B_8164_calculate_rmove_pitch_compensate Lib "8164.dll" Alias "_8164_calculate_rmove_pitch_compensate" (ByVal AxisNo As Integer, ByVal Dist As Double, Result As Double) As Integer
Declare Function B_8164_get_pitch_table_target_pos Lib "8164.dll" Alias "_8164_get_pitch_table_target_pos" (ByVal AxisNo As Integer, TargetPos As Double) As Integer

Declare Function B_8164_tv_move Lib "8164.dll" Alias "_8164_tv_move" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Integer
Declare Function B_8164_sv_move Lib "8164.dll" Alias "_8164_sv_move" (ByVal AxisNo As Integer, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal SVacc As Double) As Integer
Declare Function B_8164_emg_stop Lib "8164.dll" Alias "_8164_emg_stop" (ByVal AxisNo As Integer) As Integer
Declare Function B_8164_sd_stop Lib "8164.dll" Alias "_8164_sd_stop" (ByVal AxisNo As Integer, ByVal Tdec As Double) As Integer
Declare Function B_8164_sd_stop_ex Lib "8164.dll" Alias "_8164_sd_stop_ex" (ByVal AxisNo As Integer, ByVal Tdec As Double) As Integer
Declare Function B_8164_v_change Lib "8164.dll" Alias "_8164_v_change" (ByVal AxisNo As Integer, ByVal NewVel As Double, ByVal TimeSecond As Double) As Integer
Declare Function B_8164_cmp_v_change Lib "8164.dll" Alias "_8164_cmp_v_change" (ByVal AxisNo As Integer, ByVal Res_Dist As Double, ByVal OldVel As Double, ByVal NewVel As Double, ByVal Time As Double) As Integer
Declare Function B_8164_p_change Lib "8164.dll" Alias "_8164_p_change" (ByVal AxisNo As Integer, ByVal NewPos As Double) As Integer
Declare Function B_8164_fix_speed_range Lib "8164.dll" Alias "_8164_fix_speed_range" (ByVal AxisNo As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8164_unfix_speed_range Lib "8164.dll" Alias "_8164_unfix_speed_range" (ByVal AxisNo As Integer) As Integer
Declare Function B_8164_set_continuous_move Lib "8164.dll" Alias "_8164_set_continuous_move" (ByVal AxisNo As Integer, ByVal conti_logic As Integer) As Integer

Declare Function B_8164_set_soft_limit Lib "8164.dll" Alias "_8164_set_soft_limit" (ByVal AxisNo As Integer, ByVal PLimit As Long, ByVal NLimit As Long) As Integer
Declare Function B_8164_disable_soft_limit Lib "8164.dll" Alias "_8164_disable_soft_limit" (ByVal AxisNo As Integer) As Integer
Declare Function B_8164_enable_soft_limit Lib "8164.dll" Alias "_8164_enable_soft_limit" (ByVal AxisNo As Integer, ByVal Action As Integer) As Integer

Declare Function B_8164_set_error_counter_check Lib "8164.dll" Alias "_8164_set_error_counter_check" (ByVal AxisNo As Integer, ByVal Tolerance As Integer, ByVal on_off As Integer) As Integer
Declare Function B_8164_set_general_comparator Lib "8164.dll" Alias "_8164_set_general_comparator" (ByVal AxisNo As Integer, ByVal CmpSrc As Integer, ByVal CmpMethod As Integer, ByVal CmpAction As Integer, ByVal Data As Double) As Integer
Declare Function B_8164_set_trigger_comparator Lib "8164.dll" Alias "_8164_set_trigger_comparator" (ByVal AxisNo As Integer, ByVal CmpSrc As Integer, ByVal CmpMethod As Integer, ByVal Data As Double) As Integer
Declare Function B_8164_set_trigger_type Lib "8164.dll" Alias "_8164_set_trigger_type" (ByVal AxisNo As Integer, ByVal TriggerType As Integer) As Integer

Declare Function B_8164_check_compare_data Lib "8164.dll" Alias "_8164_check_compare_data" (ByVal AxisNo As Integer, ByVal CompType As Integer, Pos As Double) As Integer
